# bdev_mass_spec

./: .gitattributes  .gitignore  10_analysis.ipynb  1_analysis.ipynb  240111 Target Lists.docx  240118 Target Lists 6, median.docx  240118 Target Lists.docx  240119 Target Lists 6, mean.docx  240119 Target Lists 7, mean.docx  240119 Target Lists 7, median.docx  240122 Target Lists 6, mean, or.docx  240124 Target Lists Secreted.docx  240212 Figure2 Update.docx  240219 Fig 2.prism  240219 Fig 2.pzfx  240226 SD Olink Paper Comments.docx  2_analysis.ipynb  3_analysis.ipynb  4_analysis.ipynb  5_analysis.ipynb  6_analysis.ipynb  8_analysis.ipynb  9_analysis.ipynb  AD OLINK Update.pptx  AD OLINK Update.prism  BT082923.csv  CD63 CD81 QC Checks · Benchling.html  CITATION.cff  CITATION.md  Email Draft.docx  First Draft_Olink paper SD231128.docx  HT_analysis.ipynb  Intersections_4.txt  JEV Cover letter 2.0_SD_240327.docx  LICENSE.md  OLINK Analysis.ipynb  OLINK Analysis_2.xlsx  OLINK Graphing.ipynb  OLINK Paper Figures.docx  OLINK_Analysis_2.txt  (+112 more)
CD63 CD81 QC Checks · Benchling_files/: 337.99d8d8b3c8eda3b2a03c11a3f0a5e656.js.download  4.9b80d05c09e44cee637b847c98d62255.js.download  467.000472be3a2708c095d55f748cba13bd.js.download  505.7996e351d9e323e1273666e8859654f7.js.download  511.cc0f846f74421ccb0557e6b2c087f599.js.download  527.6de2c1b67ac62e9720106db62a1be404.js.download  590.3f2cc1f84ab502ca5b760019fbd43227.js.download  604.98617e940a8184f5b9ddfa22ad0f718e.js.download  74.76a6c265f8c986850f17d0ab0893370c.js.download  (+11 more)
EVProteomics/: LICENSE  README.md  pyproject.toml  setup.py
(+711 files in other folders)
